--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Galloners Club</title>
+    <title>Galloners Club - Login</title>
     <style>
         body {
             margin: 0;
@@ -11,45 +11,85 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            color: white;
         }
 
-        .container {
+        .login-box {
+            background: white;
+            padding: 40px;
+            border-radius: 10px;
+            width: 320px;
             text-align: center;
+            box-shadow: 0px 5px 20px rgba(0,0,0,0.2);
         }
 
-        h1 {
-            font-size: 40px;
-            margin-bottom: 20px;
+        h2 {
+            color: #b30000;
+            margin-bottom: 25px;
         }
 
-        p {
-            font-size: 18px;
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        input:focus {
+            border-color: #b30000;
+            outline: none;
         }
 
         button {
-            padding: 10px 20px;
-            background: white;
-            color: #b30000;
+            width: 100%;
+            padding: 10px;
+            background-color: #b30000;
+            color: white;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
             font-weight: bold;
+            cursor: pointer;
+            margin-top: 10px;
         }
 
         button:hover {
-            background: #f2f2f2;
+            background-color: #800000;
+        }
+
+        .footer-text {
+            margin-top: 15px;
+            font-size: 12px;
+            color: gray;
         }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <h1>Galloners Club</h1>
-    <p>Welcome to the Official Donor System</p>
-    <button>Enter</button>
+<div class="login-box">
+    <h2>Galloners Club</h2>
+
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+
+    <button onclick="login()">Login</button>
+
+    <div class="footer-text">
+        Authorized Access Only
+    </div>
 </div>
+
+<script>
+function login() {
+    var user = document.getElementById("username").value;
+    var pass = document.getElementById("password").value;
+
+    if (user === "admin" && pass === "1234") {
+        window.location.href = "dashboard.html";
+    } else {
+        alert("Invalid Username or Password");
+    }
+}
+</script>
 
 </body>
 </html>
-
