--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
             box-shadow: 0px 5px 20px rgba(0,0,0,0.2);
         }
 
+        .logo {
+            width: 100px;
+            margin-bottom: 15px;
+        }
+
         h2 {
             color: #b30000;
-            margin-bottom: 25px;
+            margin-bottom: 20px;
         }
 
         input {
@@ -35,61 +40,4 @@
             border-radius: 5px;
         }
 
-        input:focus {
-            border-color: #b30000;
-            outline: none;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #b30000;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-weight: bold;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-
-        button:hover {
-            background-color: #800000;
-        }
-
-        .footer-text {
-            margin-top: 15px;
-            font-size: 12px;
-            color: gray;
-        }
-    </style>
-</head>
-<body>
-
-<div class="login-box">
-    <h2>Galloners Club</h2>
-
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
-
-    <button onclick="login()">Login</button>
-
-    <div class="footer-text">
-        Authorized Access Only
-    </div>
-</div>
-
-<script>
-function login() {
-    var user = document.getElementById("username").value;
-    var pass = document.getElementById("password").value;
-
-    if (user === "admin" && pass === "1234") {
-        window.location.href = "dashboard.html";
-    } else {
-        alert("Invalid Username or Password");
-    }
-}
-</script>
-
-</body>
-</html>
+        input
