--- a/donor-entry.html
+++ b/donor-entry.html
@@ -38,6 +38,26 @@
             color: #b30000;
         }
 
+        /* Blood Type Buttons */
+        .blood-types {
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        .blood-btn {
+            padding: 8px 15px;
+            margin: 5px;
+            border: none;
+            border-radius: 5px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .type-a { background-color: blue; color: white; }
+        .type-b { background-color: yellow; color: black; }
+        .type-o { background-color: white; color: black; border: 1px solid #ccc; }
+        .type-ab { background-color: pink; color: black; }
+
         input {
             width: 100%;
             padding: 10px;
@@ -61,26 +81,14 @@
             color: white;
         }
 
-        .save-btn:hover {
-            background-color: #800000;
-        }
-
         .tracking-btn {
             background-color: #ff4d4d;
             color: white;
         }
 
-        .tracking-btn:hover {
-            background-color: #cc0000;
-        }
-
         .back-btn {
             background-color: gray;
             color: white;
-        }
-
-        .back-btn:hover {
-            background-color: #555;
         }
     </style>
 </head>
@@ -93,6 +101,17 @@
 </header>
 
 <div class="container">
+
+    <!-- Blood Type Section (Added at TOP) -->
+    <div class="blood-types">
+        <p><strong>Select Blood Type:</strong></p>
+        <button class="blood-btn type-a" onclick="setBloodType('A')">Type A</button>
+        <button class="blood-btn type-b" onclick="setBloodType('B')">Type B</button>
+        <button class="blood-btn type-o" onclick="setBloodType('O')">Type O</button>
+        <button class="blood-btn type-ab" onclick="setBloodType('AB')">Type AB</button>
+    </div>
+
+    <input type="hidden" id="bloodType">
 
     <input type="text" id="firstName" placeholder="First Name">
     <input type="text" id="middleName" placeholder="Middle Name">
@@ -108,8 +127,14 @@
 </div>
 
 <script>
+    function setBloodType(type) {
+        document.getElementById("bloodType").value = type;
+        alert("Blood Type " + type + " Selected");
+    }
+
     function saveDonor() {
         var donor = {
+            bloodType: document.getElementById("bloodType").value,
             firstName: document.getElementById("firstName").value,
             middleName: document.getElementById("middleName").value,
             surname: document.getElementById("surname").value,
@@ -123,13 +148,6 @@
         localStorage.setItem("donors", JSON.stringify(donors));
 
         alert("Donor Saved Successfully!");
-
-        document.getElementById("firstName").value = "";
-        document.getElementById("middleName").value = "";
-        document.getElementById("surname").value = "";
-        document.getElementById("birthday").value = "";
-        document.getElementById("contact").value = "";
-        document.getElementById("serial").value = "";
     }
 
     function goBack() {
