--- a/donor-entry.html
+++ b/donor-entry.html
@@ -25,7 +25,7 @@
         }
 
         .container {
-            max-width: 500px;
+            max-width: 600px;
             margin: 30px auto;
             background: white;
             padding: 25px;
@@ -38,25 +38,32 @@
             color: #b30000;
         }
 
-        /* Blood Type Buttons */
+        /* Blood Types */
         .blood-types {
-            text-align: center;
-            margin-bottom: 15px;
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
         }
 
         .blood-btn {
-            padding: 8px 15px;
+            flex: 1;
             margin: 5px;
-            border: none;
+            padding: 10px;
             border-radius: 5px;
+            border: 2px solid transparent;
             font-weight: bold;
             cursor: pointer;
         }
 
-        .type-a { background-color: blue; color: white; }
-        .type-b { background-color: yellow; color: black; }
-        .type-o { background-color: white; color: black; border: 1px solid #ccc; }
-        .type-ab { background-color: pink; color: black; }
+        .type-a { background: blue; color: white; }
+        .type-b { background: yellow; color: black; }
+        .type-o { background: white; color: black; border: 1px solid #ccc; }
+        .type-ab { background: pink; color: black; }
+
+        .selected {
+            border: 3px solid #b30000 !important;
+            transform: scale(1.05);
+        }
 
         input {
             width: 100%;
@@ -66,30 +73,20 @@
             border-radius: 5px;
         }
 
-        button {
+        button.main-btn {
             width: 100%;
             padding: 10px;
+            margin-top: 10px;
             border: none;
             border-radius: 5px;
             font-weight: bold;
             cursor: pointer;
-            margin-top: 10px;
-        }
-
-        .save-btn {
-            background-color: #b30000;
             color: white;
         }
 
-        .tracking-btn {
-            background-color: #ff4d4d;
-            color: white;
-        }
-
-        .back-btn {
-            background-color: gray;
-            color: white;
-        }
+        .save-btn { background-color: #b30000; }
+        .tracking-btn { background-color: #ff4d4d; }
+        .back-btn { background-color: gray; }
     </style>
 </head>
 
@@ -102,13 +99,13 @@
 
 <div class="container">
 
-    <!-- Blood Type Section (Added at TOP) -->
+    <p><strong>Select Blood Type:</strong></p>
+
     <div class="blood-types">
-        <p><strong>Select Blood Type:</strong></p>
-        <button class="blood-btn type-a" onclick="setBloodType('A')">Type A</button>
-        <button class="blood-btn type-b" onclick="setBloodType('B')">Type B</button>
-        <button class="blood-btn type-o" onclick="setBloodType('O')">Type O</button>
-        <button class="blood-btn type-ab" onclick="setBloodType('AB')">Type AB</button>
+        <button class="blood-btn type-a" onclick="setBloodType(this,'A')">A</button>
+        <button class="blood-btn type-b" onclick="setBloodType(this,'B')">B</button>
+        <button class="blood-btn type-o" onclick="setBloodType(this,'O')">O</button>
+        <button class="blood-btn type-ab" onclick="setBloodType(this,'AB')">AB</button>
     </div>
 
     <input type="hidden" id="bloodType">
@@ -120,16 +117,20 @@
     <input type="text" id="contact" placeholder="Contact Number">
     <input type="text" id="serial" placeholder="Serial Number">
 
-    <button class="save-btn" onclick="saveDonor()">Save Donor</button>
-    <button class="tracking-btn" onclick="goTracking()">Go to Tracking</button>
-    <button class="back-btn" onclick="goBack()">Back to Dashboard</button>
+    <button class="main-btn save-btn" onclick="saveDonor()">Save Donor</button>
+    <button class="main-btn tracking-btn" onclick="goTracking()">Go to Tracking</button>
+    <button class="main-btn back-btn" onclick="goBack()">Back to Dashboard</button>
 
 </div>
 
 <script>
-    function setBloodType(type) {
+    function setBloodType(button, type) {
         document.getElementById("bloodType").value = type;
-        alert("Blood Type " + type + " Selected");
+
+        var buttons = document.querySelectorAll(".blood-btn");
+        buttons.forEach(btn => btn.classList.remove("selected"));
+
+        button.classList.add("selected");
     }
 
     function saveDonor() {
