--- a/donor-entry.html
+++ b/donor-entry.html
@@ -3,7 +3,6 @@
 <head>
     <title>Galloners Club - Donor Entry</title>
     <meta charset="UTF-8">
-
     <style>
         body {
             margin: 0;
@@ -33,12 +32,6 @@
             box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
         }
 
-        h2 {
-            text-align: center;
-            color: #b30000;
-        }
-
-        /* Blood Types */
         .blood-types {
             display: flex;
             justify-content: space-between;
@@ -73,7 +66,7 @@
             border-radius: 5px;
         }
 
-        button.main-btn {
+        .main-btn {
             width: 100%;
             padding: 10px;
             margin-top: 10px;
@@ -98,8 +91,6 @@
 </header>
 
 <div class="container">
-
-    <p><strong>Select Blood Type:</strong></p>
 
     <div class="blood-types">
         <button class="blood-btn type-a" onclick="setBloodType(this,'A')">A</button>
