--- a/tracking.html
+++ b/tracking.html
@@ -3,7 +3,6 @@
 <head>
     <title>Galloners Club - Tracking</title>
     <meta charset="UTF-8">
-
     <style>
         body {
             margin: 0;
@@ -33,20 +32,6 @@
             box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
         }
 
-        .top-controls {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-bottom: 15px;
-        }
-
-        select, button {
-            padding: 8px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            cursor: pointer;
-        }
-
         table {
             width: 100%;
             border-collapse: collapse;
@@ -63,10 +48,43 @@
             color: white;
         }
 
-        .gold { background: gold; }
-        .silver { background: silver; }
-        .bronze { background: #cd7f32; color: white; }
-        .galloner { background: #4CAF50; color: white; }
+        button {
+            padding: 5px 8px;
+            margin: 2px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            color: white;
+        }
+
+        .add-btn { background: #4CAF50; }
+        .edit-btn { background: #2196F3; }
+        .delete-btn { background: #f44336; }
+        .view-btn { background: #9c27b0; }
+
+        .serial-list {
+            text-align: left;
+            padding: 10px;
+            background: #fafafa;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+        }
 
     </style>
 </head>
@@ -80,117 +98,167 @@
 
 <div class="container">
 
-    <!-- FILTERS -->
-    <div class="top-controls">
+<table>
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Blood Type</th>
+            <th>Serial Count</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody id="donorTable"></tbody>
+</table>
 
-        <select id="bloodFilter" onchange="renderTable()">
-            <option value="">All Blood Types</option>
-            <option value="A">Type A</option>
-            <option value="B">Type B</option>
-            <option value="O">Type O</option>
-            <option value="AB">Type AB</option>
-        </select>
+</div>
 
-        <button onclick="setRankFilter('galloner')" class="galloner">Galloner (8)</button>
-        <button onclick="setRankFilter('bronze')" class="bronze">Bronze (28)</button>
-        <button onclick="setRankFilter('silver')" class="silver">Silver (46)</button>
-        <button onclick="setRankFilter('gold')" class="gold">Gold (70)</button>
-
-        <button onclick="clearRankFilter()">Clear Rank</button>
-
-        <button onclick="exportToGoogleSheet()">Export to Google Sheet</button>
-
+<!-- CONFIRM MODAL -->
+<div class="modal" id="confirmModal">
+    <div class="modal-content">
+        <p id="modalText"></p>
+        <button class="delete-btn" onclick="confirmDelete()">Yes</button>
+        <button onclick="closeModal()">Cancel</button>
     </div>
-
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>Blood Type</th>
-                <th>Serial Count</th>
-            </tr>
-        </thead>
-        <tbody id="donorTable"></tbody>
-    </table>
-
 </div>
 
 <script>
 
-let rankFilter = "";
-
-function setRankFilter(rank) {
-    rankFilter = rank;
-    renderTable();
-}
-
-function clearRankFilter() {
-    rankFilter = "";
-    renderTable();
-}
-
-function getRank(count) {
-    if (count >= 70) return "gold";
-    if (count >= 46) return "silver";
-    if (count >= 28) return "bronze";
-    if (count >= 8) return "galloner";
-    return "";
-}
+let deleteData = {};
 
 function renderTable() {
     let donors = JSON.parse(localStorage.getItem("donors")) || [];
-    let bloodFilter = document.getElementById("bloodFilter").value;
     let table = document.getElementById("donorTable");
     table.innerHTML = "";
 
     donors.forEach((donor, index) => {
 
         let serialCount = donor.serials ? donor.serials.length : 0;
-        let rank = getRank(serialCount);
-
-        if (bloodFilter && donor.bloodType !== bloodFilter) return;
-        if (rankFilter && rank !== rankFilter) return;
 
         table.innerHTML += `
             <tr>
                 <td>${index + 1}</td>
                 <td>${donor.firstName} ${donor.middleName} ${donor.surname}</td>
-                <td>${donor.bloodType}</td>
-                <td>${serialCount}</td>
+                <td>
+                    ${donor.bloodType}
+                    <button class="add-btn" onclick="showAddSerial(${index})">+ Serial</button>
+                </td>
+                <td>
+                    ${serialCount}
+                    <button class="view-btn" onclick="toggleSerialList(${index})">View</button>
+                </td>
+                <td>
+                    <button class="edit-btn" onclick="editDonor(${index})">Edit</button>
+                    <button class="delete-btn" onclick="prepareDeleteDonor(${index})">Delete</button>
+                </td>
+            </tr>
+
+            <tr id="serialRow${index}" style="display:none;">
+                <td colspan="5" class="serial-list" id="serialList${index}"></td>
+            </tr>
+
+            <tr id="inlineRow${index}" style="display:none;">
+                <td colspan="5">
+                    <input type="text" id="serial${index}" placeholder="Serial Number">
+                    <input type="date" id="date${index}">
+                    <button class="add-btn" onclick="addSerial(${index})">Save</button>
+                </td>
             </tr>
         `;
     });
 }
 
-function exportToGoogleSheet() {
+function showAddSerial(index) {
+    let row = document.getElementById("inlineRow" + index);
+    row.style.display = row.style.display === "none" ? "table-row" : "none";
+}
 
+function addSerial(index) {
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+    let serialValue = document.getElementById("serial" + index).value.trim();
+    let dateValue = document.getElementById("date" + index).value;
+
+    if (!serialValue) {
+        alert("Enter serial number");
+        return;
+    }
+
+    if (!donors[index].serials) donors[index].serials = [];
+
+    // DUPLICATE DETECTION
+    let duplicate = donors[index].serials.some(s => s.number === serialValue);
+    if (duplicate) {
+        alert("Duplicate serial number detected!");
+        return;
+    }
+
+    donors[index].serials.push({ number: serialValue, date: dateValue });
+
+    localStorage.setItem("donors", JSON.stringify(donors));
+    renderTable();
+}
+
+function toggleSerialList(index) {
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+    let row = document.getElementById("serialRow" + index);
+    let container = document.getElementById("serialList" + index);
+
+    if (row.style.display === "none") {
+        let list = donors[index].serials || [];
+        container.innerHTML = list.length === 0 ? 
+            "No serial numbers." :
+            list.map((s, i) =>
+                `${s.number} (${s.date || "No date"})
+                 <button class="delete-btn" onclick="prepareDeleteSerial(${index},${i})">Delete</button>`
+            ).join("<br>");
+
+        row.style.display = "table-row";
+    } else {
+        row.style.display = "none";
+    }
+}
+
+function editDonor(index) {
+    localStorage.setItem("editIndex", index);
+    window.location.href = "donor-entry.html";
+}
+
+/* ---------- DELETE LOGIC ---------- */
+
+function prepareDeleteDonor(index) {
+    deleteData = { type: "donor", index: index };
+    document.getElementById("modalText").innerText = "Delete entire donor?";
+    openModal();
+}
+
+function prepareDeleteSerial(donorIndex, serialIndex) {
+    deleteData = { type: "serial", donorIndex, serialIndex };
+    document.getElementById("modalText").innerText = "Delete this serial number?";
+    openModal();
+}
+
+function confirmDelete() {
     let donors = JSON.parse(localStorage.getItem("donors")) || [];
 
-    let rows = [
-        ["Name", "Blood Type", "Serial Count"]
-    ];
+    if (deleteData.type === "donor") {
+        donors.splice(deleteData.index, 1);
+    }
 
-    donors.forEach(donor => {
-        let serialCount = donor.serials ? donor.serials.length : 0;
+    if (deleteData.type === "serial") {
+        donors[deleteData.donorIndex].serials.splice(deleteData.serialIndex, 1);
+    }
 
-        rows.push([
-            donor.firstName + " " + donor.middleName + " " + donor.surname,
-            donor.bloodType,
-            serialCount
-        ]);
-    });
+    localStorage.setItem("donors", JSON.stringify(donors));
+    closeModal();
+    renderTable();
+}
 
-    let csvContent = "data:text/csv;charset=utf-8,"
-        + rows.map(e => e.join(",")).join("\n");
+function openModal() {
+    document.getElementById("confirmModal").style.display = "flex";
+}
 
-    let encodedUri = encodeURI(csvContent);
-    let link = document.createElement("a");
-    link.setAttribute("href", encodedUri);
-    link.setAttribute("download", "donor_tracking.csv");
-    document.body.appendChild(link);
-
-    link.click();
+function closeModal() {
+    document.getElementById("confirmModal").style.display = "none";
 }
 
 renderTable();
